# king-arthur

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/: copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: command.yaml
.github/workflows/: build-deploy.yaml  lint-build-deploy.yaml  lint.yaml  main.yaml  sentry_release.yaml  status_embed.yaml
arthur/: __init__.py  __main__.py  bot.py  config.py  constants.py  extensions.py  log.py  pagination.py  utils.py
arthur/apis/: github.py
arthur/apis/cloudflare/: zones.py
arthur/apis/directory/: __init__.py  freeipa.py  keycloak.py  ldap.py
arthur/apis/email/: __init__.py  smtp.py
arthur/apis/github/: __init__.py  common.py  orgs.py  teams.py
arthur/apis/grafana/: __init__.py  teams.py
arthur/apis/kubernetes/: __init__.py  certificates.py  deployments.py  jobs.py  nodes.py  pods.py
arthur/apis/netcup/: ssh.py
arthur/apis/systems/: __init__.py  lib9front.py
arthur/exts/: __init__.py
arthur/exts/cloudflare/: __init__.py  zones.py
arthur/exts/directory/: ldap.py
arthur/exts/error_handler/: __init__.py  error_handler.py
arthur/exts/fun/: __init__.py  devops_rules.py  ed.py  motivation.py  numbers.py  quotes.py  remote_command_runner.py
arthur/exts/github/: __init__.py  management.py
arthur/exts/grafana/: __init__.py  github_team_sync.py  ldap_team_sync.py  team_sync.py
arthur/exts/kubernetes/: __init__.py  certificates.py  deployments.py  jobs.py  nodes.py  pods.py
arthur/exts/motd/: _encrypt_motd.py  _motd_crypto.py  _motd_data.py  motd.py
arthur/exts/systems/: __init__.py  _motd.py  motd.py  system_information.py
arthur/resources/systems/: management_comments.txt  smileys.txt  supportive_comments.txt  uwsgi_loglines.txt
scripts/: encrypt_motd.py
