[tool.poetry]
name = "king-arthur"
version = "1.0.0"
description = "King Arthur is a helper for the Python Discord DevOps team."
authors = ["Joe Banks <joe@jb3.dev>", "Chris Lovering <chris@jb3.dev>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"

# See https://bot-core.pythondiscord.com/ for docs.
pydis-core = "11.3.1"

beautifulsoup4 = "4.12.3"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
loguru = "0.7.2"
kubernetes_asyncio = "30.3.0"
tabulate = { extras = ["widechars"], version = "0.9.0" }
jishaku = "2.5.2"
sentry-sdk = "2.13.0"
humanize = "4.10.0"
wand = "0.6.13"
python-freeipa = "^1.0.8"
python-keycloak = "^4.2.3"

[tool.poetry.dev-dependencies]
pre-commit = "3.8.0"
ruff = "0.5.4"
taskipy = "1.13.0"

[tool.poetry.group.ldap]
optional = true
[tool.poetry.group.ldap.dependencies]
bonsai = "^1.5.3"

[tool.taskipy.tasks]
start = "python -m arthur"
lint = "pre-commit run --all-files"
format = "ruff format arthur"
precommit = "pre-commit install"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
extend-exclude = [".cache"]
line-length = 100
unsafe-fixes = true
preview = true
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "CPY001",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "RET504",
    "RUF005",
    "S311",
    "SIM102", "SIM108",
    "PD",
    "PLR0913", "PLR0917", "PLR6301",
    "DTZ003",

    # Rules suggested to be ignored when using ruff format
    "COM812", "D206", "E111", "E114", "E117", "E501", "ISC001", "Q000", "Q001", "Q002", "Q003", "W191",
]

[tool.ruff.lint.per-file-ignores]
# McCabe is not supported on Linux systems
"arthur/apis/systems/*.py" = ["C901", "PLR0912", "PERF401", "PLR2004"]
# Bug in complexity calculation, similar to the above
"arthur/exts/systems/system_information.py" = ["C901", "PLR2004"]


[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true
